ingressdemo/ingressdemo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingressdemo-service
  labels:
    app: ingressdemo-service
spec:
  selector:
    app: ingressdemo
  #type: NodePort  #用主机IP:31000访问
  #type: ClusterIP
  ports:
    - name: default
      #nodePort: 31000 #用主机IP:31000访问
      protocol: TCP
      port: 80
      targetPort: 80
